updated footer: added bottom-footer (copyright, credits), updated main footer t/b margins

--- a/assets/scss/_cherry-blossoms.scss
+++ b/assets/scss/_cherry-blossoms.scss
@@ -24,11 +24,12 @@
         position: fixed;
     }
 }
+
 .ie #cherry-blossoms{
     z-index: -1;
 }
 
-#cb-a{
+#cherry-blossom-main{
     @include background( image-url( "cherry-blossom-shadow.png" ));
     background-position: -135px -97px;
     background-repeat: no-repeat;
