added proper phone # link. refined bot-footer styles.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -698,42 +698,73 @@ button {
   padding: 0;
   font-size: 13px;
   letter-spacing: 1px;
+  text-transform: uppercase;
   background-color: #b12e4f;
 }
-/* line 101, ../scss/_footer.scss */
+/* line 102, ../scss/_footer.scss */
 #bottom-footer > .container {
   padding: 0;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 @media only all and (max-width: 767px) {
-  /* line 101, ../scss/_footer.scss */
+  /* line 102, ../scss/_footer.scss */
   #bottom-footer > .container {
     margin-top: 10px;
-    margin-bottom: 14px;
+    margin-bottom: 10px;
   }
 }
-@media only all and (max-width: 767px) {
-  /* line 114, ../scss/_footer.scss */
-  #bottom-footer .text-right {
-    text-align: left;
-  }
-  /* line 117, ../scss/_footer.scss */
-  #bottom-footer .pull-right {
-    float: left;
-  }
-  /* line 120, ../scss/_footer.scss */
-  #bottom-footer .col-sm-6 {
-    width: 100%;
-  }
-}
-/* line 125, ../scss/_footer.scss */
+/* line 112, ../scss/_footer.scss */
 #bottom-footer a {
   color: #d19aa7;
 }
-/* line 127, ../scss/_footer.scss */
+/* line 115, ../scss/_footer.scss */
 #bottom-footer a:hover, #bottom-footer a:focus {
   color: #efdde1;
+}
+/* line 119, ../scss/_footer.scss */
+#bottom-footer span {
+  color: black;
+}
+/* line 121, ../scss/_footer.scss */
+#bottom-footer span a {
+  color: black;
+}
+/* line 124, ../scss/_footer.scss */
+#bottom-footer span a:hover, #bottom-footer span a:focus {
+  color: #2ea2cc;
+}
+/* line 129, ../scss/_footer.scss */
+#bottom-footer phone {
+  white-space: nowrap;
+}
+/* line 132, ../scss/_footer.scss */
+#bottom-footer .fa {
+  margin: 5px;
+}
+@media only all and (max-width: 991px) {
+  /* line 92, ../scss/_footer.scss */
+  #bottom-footer {
+    font-size: 11px;
+  }
+}
+@media only all and (max-width: 767px) {
+  /* line 92, ../scss/_footer.scss */
+  #bottom-footer {
+    font-size: 12px;
+  }
+  /* line 143, ../scss/_footer.scss */
+  #bottom-footer .text-right {
+    text-align: left;
+  }
+  /* line 146, ../scss/_footer.scss */
+  #bottom-footer .pull-right {
+    float: left;
+  }
+  /* line 149, ../scss/_footer.scss */
+  #bottom-footer .col-sm-6 {
+    width: 100%;
+  }
 }
 
 /*
