--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -77,10 +77,10 @@
     // @include background( image-url( "bg/goth.jpg" ));
     // margin-top: 30px;
 
-    > .container {
+    /* > .container {
         padding-top:    15px;
         padding-bottom: 15px;
-    }
+    } */
 }
 
 // Sticky Footer
