--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -686,15 +686,14 @@ button {
   color: #666;
 }
 
-/* line 74, ../scss/_footer.scss */
-#footer {
-  /* > .container {
-      padding-top:    15px;
-      padding-bottom: 15px;
-  } */
+@media only all and (max-width: 767px) {
+  /* line 80, ../scss/_footer.scss */
+  #footer > .container {
+    margin-bottom: -20px;
+  }
 }
 
-/* line 92, ../scss/_footer.scss */
+/* line 96, ../scss/_footer.scss */
 #bottom-footer {
   min-height: 10px;
   padding: 0;
@@ -703,66 +702,66 @@ button {
   text-transform: uppercase;
   background-color: #b12e4f;
 }
-/* line 102, ../scss/_footer.scss */
+/* line 106, ../scss/_footer.scss */
 #bottom-footer > .container {
   padding: 0;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 @media only all and (max-width: 767px) {
-  /* line 102, ../scss/_footer.scss */
+  /* line 106, ../scss/_footer.scss */
   #bottom-footer > .container {
     margin: 15px 25px;
   }
 }
-/* line 111, ../scss/_footer.scss */
+/* line 115, ../scss/_footer.scss */
 #bottom-footer a {
   color: #d19aa7;
 }
-/* line 114, ../scss/_footer.scss */
+/* line 118, ../scss/_footer.scss */
 #bottom-footer a:hover, #bottom-footer a:focus {
   color: #efdde1;
 }
-/* line 118, ../scss/_footer.scss */
+/* line 122, ../scss/_footer.scss */
 #bottom-footer span {
   color: black;
 }
-/* line 120, ../scss/_footer.scss */
+/* line 124, ../scss/_footer.scss */
 #bottom-footer span a {
   color: black;
 }
-/* line 123, ../scss/_footer.scss */
+/* line 127, ../scss/_footer.scss */
 #bottom-footer span a:hover, #bottom-footer span a:focus {
   color: #2ea2cc;
 }
-/* line 128, ../scss/_footer.scss */
+/* line 132, ../scss/_footer.scss */
 #bottom-footer phone {
   white-space: nowrap;
 }
-/* line 131, ../scss/_footer.scss */
+/* line 135, ../scss/_footer.scss */
 #bottom-footer .fa {
   margin: 5px;
 }
 @media only all and (max-width: 991px) {
-  /* line 92, ../scss/_footer.scss */
+  /* line 96, ../scss/_footer.scss */
   #bottom-footer {
     font-size: 11px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 92, ../scss/_footer.scss */
+  /* line 96, ../scss/_footer.scss */
   #bottom-footer {
     font-size: 12px;
   }
-  /* line 142, ../scss/_footer.scss */
+  /* line 146, ../scss/_footer.scss */
   #bottom-footer .text-right {
     text-align: left;
   }
-  /* line 145, ../scss/_footer.scss */
+  /* line 149, ../scss/_footer.scss */
   #bottom-footer .pull-right {
     float: left;
   }
-  /* line 148, ../scss/_footer.scss */
+  /* line 152, ../scss/_footer.scss */
   #bottom-footer .col-sm-6 {
     width: 100%;
     padding: 0;
