--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1503,63 +1503,68 @@ section .col-sm-5, section .col-md-6 {
 
 /* line 88, ../scss/_page-specific.scss */
 .mq-list {
-  padding-bottom: 20px;
-  top: 0;
+  padding-bottom: 30px;
 }
-/* line 92, ../scss/_page-specific.scss */
+@media only all and (max-width: 991px) {
+  /* line 88, ../scss/_page-specific.scss */
+  .mq-list {
+    padding-bottom: 20px;
+  }
+}
+/* line 94, ../scss/_page-specific.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 92, ../scss/_page-specific.scss */
+  /* line 94, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 92, ../scss/_page-specific.scss */
+  /* line 94, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 92, ../scss/_page-specific.scss */
+  /* line 94, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 107, ../scss/_page-specific.scss */
+/* line 109, ../scss/_page-specific.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 107, ../scss/_page-specific.scss */
+  /* line 109, ../scss/_page-specific.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 107, ../scss/_page-specific.scss */
+  /* line 109, ../scss/_page-specific.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 116, ../scss/_page-specific.scss */
+/* line 118, ../scss/_page-specific.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 116, ../scss/_page-specific.scss */
+  /* line 118, ../scss/_page-specific.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 122, ../scss/_page-specific.scss */
+/* line 124, ../scss/_page-specific.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 125, ../scss/_page-specific.scss */
+/* line 127, ../scss/_page-specific.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
@@ -1568,68 +1573,82 @@ section .col-sm-5, section .col-md-6 {
 /* 
  * 	All Pages
  */
-/* line 138, ../scss/_page-specific.scss */
+/* line 140, ../scss/_page-specific.scss */
 .home .hentry, .blog .hentry, .page-id-21 .hentry {
   margin: 0;
 }
 
-/* line 142, ../scss/_page-specific.scss */
+/* line 144, ../scss/_page-specific.scss */
 .entry-content {
   padding: 15px 3px;
 }
-/* line 144, ../scss/_page-specific.scss */
+/* line 146, ../scss/_page-specific.scss */
 .entry-content p {
   margin-bottom: 15px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 991px) {
-  /* line 144, ../scss/_page-specific.scss */
+  /* line 146, ../scss/_page-specific.scss */
   .entry-content p {
     font-size: 15px;
     line-height: 21px;
   }
 }
-/* line 152, ../scss/_page-specific.scss */
+/* line 154, ../scss/_page-specific.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 157, ../scss/_page-specific.scss */
+/* line 158, ../scss/_page-specific.scss */
+#col-credits {
+  padding-left: 5px;
+}
+
+/* line 161, ../scss/_page-specific.scss */
+.credits {
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+/* line 164, ../scss/_page-specific.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 161, ../scss/_page-specific.scss */
+  /* line 168, ../scss/_page-specific.scss */
   .credits td {
     padding: 1px !important;
   }
 }
-
-/* line 166, ../scss/_page-specific.scss */
-.media, .description {
-  margin-bottom: 30px;
+/* line 172, ../scss/_page-specific.scss */
+.credits a {
+  padding-left: 10px;
 }
 
-/* line 170, ../scss/_page-specific.scss */
+/* line 176, ../scss/_page-specific.scss */
+.media, .description {
+  margin-bottom: 10px;
+}
+
+/* line 180, ../scss/_page-specific.scss */
 .media p {
   margin: 0;
 }
-/* line 173, ../scss/_page-specific.scss */
+/* line 183, ../scss/_page-specific.scss */
 .media img {
   margin: 0;
 }
-/* line 177, ../scss/_page-specific.scss */
+/* line 187, ../scss/_page-specific.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 182, ../scss/_page-specific.scss */
+/* line 192, ../scss/_page-specific.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 191, ../scss/_page-specific.scss */
+/* line 201, ../scss/_page-specific.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
@@ -1927,14 +1946,20 @@ a:hover {
 
 /* line 104, ../scss/custom.scss */
 .main-content {
-  padding-top: 85px;
-  padding-bottom: 10px;
+  padding-top: 80px;
+  padding-bottom: 30px;
+}
+@media only all and (max-width: 1199px) {
+  /* line 104, ../scss/custom.scss */
+  .main-content {
+    padding-top: 75px;
+  }
 }
 @media only all and (max-width: 991px) {
   /* line 104, ../scss/custom.scss */
   .main-content {
     padding-top: 70px;
-    padding-bottom: 0px;
+    padding-bottom: 30px;
   }
 }
 @media only all and (max-width: 767px) {
@@ -1944,75 +1969,75 @@ a:hover {
     padding-bottom: 0px;
   }
 }
-/* line 117, ../scss/custom.scss */
+/* line 121, ../scss/custom.scss */
 .main-content > .container {
   padding: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 117, ../scss/custom.scss */
+  /* line 121, ../scss/custom.scss */
   .main-content > .container {
     background-color: transparent;
     padding: 0 15px;
   }
 }
 
-/* line 126, ../scss/custom.scss */
+/* line 130, ../scss/custom.scss */
 .main-content-inner {
   padding-bottom: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 129, ../scss/custom.scss */
+  /* line 133, ../scss/custom.scss */
   .main-content-inner .col-sm-6 {
     padding: 0;
   }
 }
 
-/* line 137, ../scss/custom.scss */
+/* line 141, ../scss/custom.scss */
 .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
   margin: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 137, ../scss/custom.scss */
+  /* line 141, ../scss/custom.scss */
   .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
     margin: 10px;
   }
 }
 
-/* line 144, ../scss/custom.scss */
+/* line 148, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 144, ../scss/custom.scss */
+  /* line 148, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 155, ../scss/custom.scss */
+/* line 159, ../scss/custom.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 152, ../scss/custom.scss */
+  /* line 156, ../scss/custom.scss */
   .image {
     width: 100%;
   }
-  /* line 162, ../scss/custom.scss */
+  /* line 166, ../scss/custom.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 168, ../scss/custom.scss */
+/* line 172, ../scss/custom.scss */
 .search, .error404 {
   padding: 60px;
 }
 
-/* line 172, ../scss/custom.scss */
+/* line 176, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -2020,67 +2045,67 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 179, ../scss/custom.scss */
+/* line 183, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 184, ../scss/custom.scss */
+/* line 188, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 179, ../scss/custom.scss */
+  /* line 183, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 179, ../scss/custom.scss */
+  /* line 183, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 199, ../scss/custom.scss */
+/* line 203, ../scss/custom.scss */
 .fa-desktop {
   line-height: 21px;
 }
 
-/* line 202, ../scss/custom.scss */
+/* line 206, ../scss/custom.scss */
 .fa-globe {
   line-height: 19px;
 }
 
-/* line 205, ../scss/custom.scss */
+/* line 209, ../scss/custom.scss */
 .fa-responsive {
   margin-right: 5px;
 }
 
-/* line 212, ../scss/custom.scss */
+/* line 216, ../scss/custom.scss */
 .sidebar {
   padding: 10px 30px;
   margin-top: 20px;
   background-color: black;
 }
 @media only all and (max-width: 991px) {
-  /* line 212, ../scss/custom.scss */
+  /* line 216, ../scss/custom.scss */
   .sidebar {
     padding: 0;
   }
 }
-/* line 221, ../scss/custom.scss */
+/* line 225, ../scss/custom.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 225, ../scss/custom.scss */
+/* line 229, ../scss/custom.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
 
-/* line 233, ../scss/custom.scss */
+/* line 237, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
@@ -2088,7 +2113,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 244, ../scss/custom.scss */
+/* line 248, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
