--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -102,12 +102,16 @@ a:hover {
     line-height: 150%;
 }
 .main-content{
-    padding-top: 85px;
-    padding-bottom: 10px;
+    padding-top: 80px;
+    padding-bottom: 30px;
+
+    @include max_desktop {
+        padding-top: 75px;
+    }
 
     @include max_laptop {
         padding-top: 70px;
-        padding-bottom: 0px;
+        padding-bottom: 30px;
     }
     @include max_tablet{
         padding-top: 0px;
