set front page title manually in above-header.php

--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -105,6 +105,9 @@
         @include max_tablet {
             margin-right: 0.9%;
         }
+
+        img {
+        }
     }
     .smartphone {
         width: 8.1%;
