--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -41,7 +41,8 @@
     .menu-item {
         margin: 3px 0;
         text-transform: uppercase;
-        font-size: 115%;
+        font-size: 14px;
+        line-height: 20px;
 
         &:before {
             margin-left: 10px;
