sized up home page span (my name)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1444,26 +1444,28 @@ section .col-sm-5, section .col-md-6 {
 /* line 31, ../scss/_page-specific.scss */
 .home .main-content-inner span {
   color: #bf7485;
+  font-size: 26px;
+  line-height: 14px;
 }
 @media only all and (max-width: 479px) {
-  /* line 34, ../scss/_page-specific.scss */
+  /* line 36, ../scss/_page-specific.scss */
   .home .above-header {
     height: 304px;
   }
 }
 
-/* line 43, ../scss/_page-specific.scss */
+/* line 42, ../scss/_page-specific.scss */
 .col-page-left {
   padding: 0 10px 0 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 43, ../scss/_page-specific.scss */
+  /* line 42, ../scss/_page-specific.scss */
   .col-page-left {
     padding: 0;
   }
 }
 
-/* line 49, ../scss/_page-specific.scss */
+/* line 48, ../scss/_page-specific.scss */
 .hero-right {
   margin-top: 8px;
   margin-bottom: 40px;
@@ -1474,7 +1476,7 @@ section .col-sm-5, section .col-md-6 {
   border-radius: 10px;
 }
 @media only all and (max-width: 767px) {
-  /* line 49, ../scss/_page-specific.scss */
+  /* line 48, ../scss/_page-specific.scss */
   .hero-right {
     margin-bottom: 0;
   }
@@ -1483,7 +1485,7 @@ section .col-sm-5, section .col-md-6 {
 /* 
  * 	Blog 
  */
-/* line 65, ../scss/_page-specific.scss */
+/* line 64, ../scss/_page-specific.scss */
 .blog #cherry-blossom-main {
   background-position: 70% -84px;
 }
@@ -1491,81 +1493,81 @@ section .col-sm-5, section .col-md-6 {
 /* 
  * 	Responsive 
  */
-/* line 79, ../scss/_page-specific.scss */
+/* line 78, ../scss/_page-specific.scss */
 .mq-thumbs-container {
   position: relative;
 }
 
-/* line 83, ../scss/_page-specific.scss */
+/* line 82, ../scss/_page-specific.scss */
 #mq-thumbs-b, #mq-thumbs-c {
   position: absolute;
   top: 0;
 }
 
-/* line 88, ../scss/_page-specific.scss */
+/* line 87, ../scss/_page-specific.scss */
 .mq-list {
   padding-bottom: 30px;
 }
 @media only all and (max-width: 991px) {
-  /* line 88, ../scss/_page-specific.scss */
+  /* line 87, ../scss/_page-specific.scss */
   .mq-list {
     padding-bottom: 20px;
   }
 }
-/* line 94, ../scss/_page-specific.scss */
+/* line 93, ../scss/_page-specific.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 94, ../scss/_page-specific.scss */
+  /* line 93, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 94, ../scss/_page-specific.scss */
+  /* line 93, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 94, ../scss/_page-specific.scss */
+  /* line 93, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 112, ../scss/_page-specific.scss */
+/* line 111, ../scss/_page-specific.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 112, ../scss/_page-specific.scss */
+  /* line 111, ../scss/_page-specific.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 112, ../scss/_page-specific.scss */
+  /* line 111, ../scss/_page-specific.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 121, ../scss/_page-specific.scss */
+/* line 120, ../scss/_page-specific.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 121, ../scss/_page-specific.scss */
+  /* line 120, ../scss/_page-specific.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 127, ../scss/_page-specific.scss */
+/* line 126, ../scss/_page-specific.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 130, ../scss/_page-specific.scss */
+/* line 129, ../scss/_page-specific.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
@@ -1574,82 +1576,82 @@ section .col-sm-5, section .col-md-6 {
 /* 
  * 	All Pages
  */
-/* line 143, ../scss/_page-specific.scss */
+/* line 142, ../scss/_page-specific.scss */
 .home .hentry, .blog .hentry, .page-id-21 .hentry {
   margin: 0;
 }
 
-/* line 147, ../scss/_page-specific.scss */
+/* line 146, ../scss/_page-specific.scss */
 .entry-content {
   padding: 15px 3px;
 }
-/* line 149, ../scss/_page-specific.scss */
+/* line 148, ../scss/_page-specific.scss */
 .entry-content p {
   margin-bottom: 15px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 991px) {
-  /* line 149, ../scss/_page-specific.scss */
+  /* line 148, ../scss/_page-specific.scss */
   .entry-content p {
     font-size: 15px;
     line-height: 21px;
   }
 }
-/* line 157, ../scss/_page-specific.scss */
+/* line 156, ../scss/_page-specific.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 161, ../scss/_page-specific.scss */
+/* line 160, ../scss/_page-specific.scss */
 #col-credits {
   padding-left: 5px;
 }
 
-/* line 164, ../scss/_page-specific.scss */
+/* line 163, ../scss/_page-specific.scss */
 .credits {
   overflow-y: hidden;
   overflow-x: hidden;
 }
-/* line 167, ../scss/_page-specific.scss */
+/* line 166, ../scss/_page-specific.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 171, ../scss/_page-specific.scss */
+  /* line 170, ../scss/_page-specific.scss */
   .credits td {
     padding: 1px !important;
   }
 }
-/* line 175, ../scss/_page-specific.scss */
+/* line 174, ../scss/_page-specific.scss */
 .credits a {
   padding-left: 10px;
 }
 
-/* line 179, ../scss/_page-specific.scss */
+/* line 178, ../scss/_page-specific.scss */
 .media, .description {
   margin-bottom: 10px;
 }
 
-/* line 183, ../scss/_page-specific.scss */
+/* line 182, ../scss/_page-specific.scss */
 .media p {
   margin: 0;
 }
-/* line 186, ../scss/_page-specific.scss */
+/* line 185, ../scss/_page-specific.scss */
 .media img {
   margin: 0;
 }
-/* line 190, ../scss/_page-specific.scss */
+/* line 189, ../scss/_page-specific.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 195, ../scss/_page-specific.scss */
+/* line 194, ../scss/_page-specific.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 204, ../scss/_page-specific.scss */
+/* line 203, ../scss/_page-specific.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
