added a lil top margin to home content

--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -28,6 +28,9 @@
             margin-top: -15px;        
         }
     }
+    .main-content {
+        padding-top: 100px;
+    }
     .main-content-inner span{
         color: $blue;
         font-size: 26px;
