--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1442,30 +1442,34 @@ section .col-sm-5, section .col-md-6 {
   }
 }
 /* line 31, ../scss/_page-specific.scss */
+.home .main-content {
+  padding-top: 100px;
+}
+/* line 34, ../scss/_page-specific.scss */
 .home .main-content-inner span {
   color: #bf7485;
   font-size: 26px;
   line-height: 14px;
 }
 @media only all and (max-width: 479px) {
-  /* line 36, ../scss/_page-specific.scss */
+  /* line 39, ../scss/_page-specific.scss */
   .home .above-header {
     height: 304px;
   }
 }
 
-/* line 42, ../scss/_page-specific.scss */
+/* line 45, ../scss/_page-specific.scss */
 .col-page-left {
   padding: 0 10px 0 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 42, ../scss/_page-specific.scss */
+  /* line 45, ../scss/_page-specific.scss */
   .col-page-left {
     padding: 0;
   }
 }
 
-/* line 48, ../scss/_page-specific.scss */
+/* line 51, ../scss/_page-specific.scss */
 .hero-right {
   margin-top: 8px;
   margin-bottom: 40px;
@@ -1476,7 +1480,7 @@ section .col-sm-5, section .col-md-6 {
   border-radius: 10px;
 }
 @media only all and (max-width: 767px) {
-  /* line 48, ../scss/_page-specific.scss */
+  /* line 51, ../scss/_page-specific.scss */
   .hero-right {
     margin-bottom: 0;
   }
@@ -1485,7 +1489,7 @@ section .col-sm-5, section .col-md-6 {
 /* 
  * 	Blog 
  */
-/* line 64, ../scss/_page-specific.scss */
+/* line 67, ../scss/_page-specific.scss */
 .blog #cherry-blossom-main {
   background-position: 70% -84px;
 }
@@ -1493,81 +1497,81 @@ section .col-sm-5, section .col-md-6 {
 /* 
  * 	Responsive 
  */
-/* line 78, ../scss/_page-specific.scss */
+/* line 81, ../scss/_page-specific.scss */
 .mq-thumbs-container {
   position: relative;
 }
 
-/* line 82, ../scss/_page-specific.scss */
+/* line 85, ../scss/_page-specific.scss */
 #mq-thumbs-b, #mq-thumbs-c {
   position: absolute;
   top: 0;
 }
 
-/* line 87, ../scss/_page-specific.scss */
+/* line 90, ../scss/_page-specific.scss */
 .mq-list {
   padding-bottom: 30px;
 }
 @media only all and (max-width: 991px) {
-  /* line 87, ../scss/_page-specific.scss */
+  /* line 90, ../scss/_page-specific.scss */
   .mq-list {
     padding-bottom: 20px;
   }
 }
-/* line 93, ../scss/_page-specific.scss */
+/* line 96, ../scss/_page-specific.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 93, ../scss/_page-specific.scss */
+  /* line 96, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 93, ../scss/_page-specific.scss */
+  /* line 96, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 93, ../scss/_page-specific.scss */
+  /* line 96, ../scss/_page-specific.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 111, ../scss/_page-specific.scss */
+/* line 114, ../scss/_page-specific.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 111, ../scss/_page-specific.scss */
+  /* line 114, ../scss/_page-specific.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 111, ../scss/_page-specific.scss */
+  /* line 114, ../scss/_page-specific.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 120, ../scss/_page-specific.scss */
+/* line 123, ../scss/_page-specific.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 120, ../scss/_page-specific.scss */
+  /* line 123, ../scss/_page-specific.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 126, ../scss/_page-specific.scss */
+/* line 129, ../scss/_page-specific.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 129, ../scss/_page-specific.scss */
+/* line 132, ../scss/_page-specific.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
@@ -1576,82 +1580,82 @@ section .col-sm-5, section .col-md-6 {
 /* 
  * 	All Pages
  */
-/* line 142, ../scss/_page-specific.scss */
+/* line 145, ../scss/_page-specific.scss */
 .home .hentry, .blog .hentry, .page-id-21 .hentry {
   margin: 0;
 }
 
-/* line 146, ../scss/_page-specific.scss */
+/* line 149, ../scss/_page-specific.scss */
 .entry-content {
   padding: 15px 3px;
 }
-/* line 148, ../scss/_page-specific.scss */
+/* line 151, ../scss/_page-specific.scss */
 .entry-content p {
   margin-bottom: 15px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 991px) {
-  /* line 148, ../scss/_page-specific.scss */
+  /* line 151, ../scss/_page-specific.scss */
   .entry-content p {
     font-size: 15px;
     line-height: 21px;
   }
 }
-/* line 156, ../scss/_page-specific.scss */
+/* line 159, ../scss/_page-specific.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 160, ../scss/_page-specific.scss */
+/* line 163, ../scss/_page-specific.scss */
 #col-credits {
   padding-left: 5px;
 }
 
-/* line 163, ../scss/_page-specific.scss */
+/* line 166, ../scss/_page-specific.scss */
 .credits {
   overflow-y: hidden;
   overflow-x: hidden;
 }
-/* line 166, ../scss/_page-specific.scss */
+/* line 169, ../scss/_page-specific.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 170, ../scss/_page-specific.scss */
+  /* line 173, ../scss/_page-specific.scss */
   .credits td {
     padding: 1px !important;
   }
 }
-/* line 174, ../scss/_page-specific.scss */
+/* line 177, ../scss/_page-specific.scss */
 .credits a {
   padding-left: 10px;
 }
 
-/* line 178, ../scss/_page-specific.scss */
+/* line 181, ../scss/_page-specific.scss */
 .media, .description {
   margin-bottom: 10px;
 }
 
-/* line 182, ../scss/_page-specific.scss */
+/* line 185, ../scss/_page-specific.scss */
 .media p {
   margin: 0;
 }
-/* line 185, ../scss/_page-specific.scss */
+/* line 188, ../scss/_page-specific.scss */
 .media img {
   margin: 0;
 }
-/* line 189, ../scss/_page-specific.scss */
+/* line 192, ../scss/_page-specific.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 194, ../scss/_page-specific.scss */
+/* line 197, ../scss/_page-specific.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 203, ../scss/_page-specific.scss */
+/* line 206, ../scss/_page-specific.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
